Adding angularjs as bower dependencie

--- a/bower.json
+++ b/bower.json
@@ -21,12 +21,15 @@
     "loader",
     "button"
   ],
-  "homepage": "https://github.com/alisonmoura/angularjs-loader-button#README",
+  "homepage": "https://github.com/alisonmoura/angularjs-loader-button#readme",
   "ignore": [
     "**/.*",
     "node_modules",
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "angular": "1.5.8"
+  }
 }
