--- a/bower.json
+++ b/bower.json
@@ -8,18 +8,9 @@
   "license": "ISC",
   "keywords": [
     "angularjs",
-    "angularjs",
     "button",
-    "angualrjs",
     "loading",
-    "angularjs",
-    "loader",
-    "angularjs",
-    "loading",
-    "button",
-    "angularjs",
-    "loader",
-    "button"
+    "loader"
   ],
   "homepage": "https://github.com/alisonmoura/angularjs-loader-button#readme",
   "ignore": [
